# netology_diplom_2

./: CMakeLists.txt  LICENSE  README.md
RaceLib/: CMakeLists.txt
RaceLib/sources/logic/: game.cpp  results.cpp
RaceLib/sources/vehicles/: all_vehicles.h  settings.cpp  settings.h  vehicle.cpp  vehicle.h
RaceLib/sources/vehicles/air/: airvehicle.h  broom.cpp  broom.h  eagle.cpp  eagle.h  magiccarpet.cpp  magiccarpet.h
RaceLib/sources/vehicles/ground/: allterrainboots.cpp  allterrainboots.h  camel.cpp  camel.h  camelrunner.cpp  camelrunner.h  centaur.cpp  centaur.h  groundvehicle.h
sources/: main.cpp
sources/logic/: game.cpp  game.h  results.cpp  results.h
